// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DetailsRight /> Self Managed cluster should not render desired nodes when they don't exist 1`] = `
<Fragment>
  <dl
    className="cluster-details-item left"
  >
    <dt>
      Status
    </dt>
    <dd
      style={
        Object {
          "textTransform": "capitalize",
        }
      }
    >
      <ClusterStateIcon
        clusterState="ready"
      />
       
      ready
    </dd>
    <dt>
      Total CPU
    </dt>
    <dd>
      0
       
      vCPU
    </dd>
    <dt>
      Total Memory
    </dt>
    <dd>
      0
       
      B
    </dd>
    <dt>
      Actual Nodes
    </dt>
    <dd>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Master:
           
        </dt>
        <dd>
          N/A
        </dd>
      </dl>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Compute:
           
        </dt>
        <dd>
          N/A
        </dd>
      </dl>
    </dd>
    <ClusterNetwork
      cluster={
        Object {
          "api": Object {
            "url": "https://api.test-liza.sdev.devshift.net:6443",
          },
          "canDelete": true,
          "canEdit": true,
          "cloud_provider": Object {
            "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
            "id": "aws",
            "kind": "CloudProviderLink",
          },
          "console": Object {
            "url": "https://console-openshift-console.apps.test-liza.sdev.devshift.net",
          },
          "cpu": Object {
            "total": Object {
              "unit": "",
              "value": 0,
            },
            "updated_timestamp": "0001-01-01T00:00:00Z",
            "used": Object {
              "unit": "",
              "value": 0,
            },
          },
          "creation_timestamp": "2019-03-26T15:18:39.06783Z",
          "creator": "***REMOVED***",
          "display_name": "test-liza",
          "dns": Object {
            "base_domain": "sdev.devshift.net",
          },
          "external_id": "9f50940b-fba8-4c59-9c6c-d64284b2026d",
          "flavour": Object {
            "href": "/api/clusters_mgmt/v1/flavours/4",
            "id": "4",
            "kind": "FlavourLink",
          },
          "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk",
          "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
          "kind": "Cluster",
          "managed": false,
          "memory": Object {
            "total": Object {
              "unit": "B",
              "value": 0,
            },
            "updated_timestamp": "0001-01-01T00:00:00Z",
            "used": Object {
              "unit": "B",
              "value": 0,
            },
          },
          "multi_az": false,
          "name": "test-liza",
          "network": Object {
            "machine_cidr": "10.0.0.0/16",
            "pod_cidr": "10.128.0.0/14",
            "router_shards": Object {
              "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards",
              "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
              "kind": "RouterShardListLink",
            },
            "service_cidr": "172.30.0.0/16",
          },
          "nodes": null,
          "region": Object {
            "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
            "id": "us-east-1",
            "kind": "CloudRegionLink",
          },
          "state": "ready",
          "storage": Object {
            "total": Object {
              "unit": "B",
              "value": 0,
            },
            "updated_timestamp": "0001-01-01T00:00:00Z",
            "used": Object {
              "unit": "B",
              "value": 0,
            },
          },
          "version": Object {
            "href": "/api/clusters_mgmt/v1/versions/openshift-v4.0-latest",
            "id": "openshift-v4.0-latest",
            "kind": "VersionLink",
          },
        }
      }
      routerShards={
        Object {
          "error": false,
          "errorMessage": "",
          "fulfilled": true,
          "pending": false,
          "routerShards": Object {
            "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards",
            "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
            "items": Array [
              Object {
                "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards/ofvv",
                "id": "ofvv",
                "kind": "RouterShard",
                "label": "test1",
                "scheme": "internal",
              },
              Object {
                "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards/jhso",
                "id": "jhso",
                "kind": "RouterShard",
                "label": "test2",
                "scheme": "internet-facing",
              },
            ],
            "kind": "RouterShardList",
            "page": 1,
            "size": 2,
            "total": 2,
          },
        }
      }
    />
  </dl>
</Fragment>
`;

exports[`<DetailsRight /> should render 1`] = `
<Fragment>
  <dl
    className="cluster-details-item left"
  >
    <dt>
      Status
    </dt>
    <dd
      style={
        Object {
          "textTransform": "capitalize",
        }
      }
    >
      <ClusterStateIcon
        clusterState="ready"
      />
       
      ready
    </dd>
    <dt>
      Total CPU
    </dt>
    <dd>
      0
       
      vCPU
    </dd>
    <dt>
      Total Memory
    </dt>
    <dd>
      0
       
      B
    </dd>
    <dt>
      Desired Nodes
    </dt>
    <dd>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Master:
           
        </dt>
        <dd>
          3
        </dd>
      </dl>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Compute:
           
        </dt>
        <dd>
          2
        </dd>
      </dl>
    </dd>
    <dt>
      Actual Nodes
    </dt>
    <dd>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Master:
           
        </dt>
        <dd>
          N/A
        </dd>
      </dl>
      <dl
        className="cluster-details-item-list left"
      >
        <dt>
          Compute:
           
        </dt>
        <dd>
          N/A
        </dd>
      </dl>
    </dd>
    <ClusterNetwork
      cluster={
        Object {
          "api": Object {
            "url": "https://api.test-liza.sdev.devshift.net:6443",
          },
          "canDelete": true,
          "canEdit": true,
          "cloud_provider": Object {
            "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
            "id": "aws",
            "kind": "CloudProviderLink",
          },
          "console": Object {
            "url": "https://console-openshift-console.apps.test-liza.sdev.devshift.net",
          },
          "creation_timestamp": "2019-03-26T15:18:39.06783Z",
          "creator": "***REMOVED***",
          "display_name": "test-liza",
          "dns": Object {
            "base_domain": "sdev.devshift.net",
          },
          "external_id": "9f50940b-fba8-4c59-9c6c-d64284b2026d",
          "flavour": Object {
            "href": "/api/clusters_mgmt/v1/flavours/4",
            "id": "4",
            "kind": "FlavourLink",
          },
          "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk",
          "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
          "kind": "Cluster",
          "managed": true,
          "metrics": Object {
            "cpu": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "0001-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "memory": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "0001-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "nodes": Object {
              "compute": 1,
              "master": 2,
              "total": 3,
            },
            "storage": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "0001-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
          },
          "multi_az": false,
          "name": "test-liza",
          "network": Object {
            "machine_cidr": "10.0.0.0/16",
            "pod_cidr": "10.128.0.0/14",
            "router_shards": Object {
              "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards",
              "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
              "kind": "RouterShardListLink",
            },
            "service_cidr": "172.30.0.0/16",
          },
          "nodes": Object {
            "compute": 2,
            "master": 3,
            "total": 5,
          },
          "region": Object {
            "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
            "id": "us-east-1",
            "kind": "CloudRegionLink",
          },
          "state": "ready",
          "version": Object {
            "href": "/api/clusters_mgmt/v1/versions/openshift-v4.0-latest",
            "id": "openshift-v4.0-latest",
            "kind": "VersionLink",
          },
        }
      }
      routerShards={
        Object {
          "error": false,
          "errorMessage": "",
          "fulfilled": true,
          "pending": false,
          "routerShards": Object {
            "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards",
            "id": "1IztzhAGrbjtKkMbiPewJanhTXk",
            "items": Array [
              Object {
                "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards/ofvv",
                "id": "ofvv",
                "kind": "RouterShard",
                "label": "test1",
                "scheme": "internal",
              },
              Object {
                "href": "/api/clusters_mgmt/v1/clusters/1IztzhAGrbjtKkMbiPewJanhTXk/router_shards/jhso",
                "id": "jhso",
                "kind": "RouterShard",
                "label": "test2",
                "scheme": "internet-facing",
              },
            ],
            "kind": "RouterShardList",
            "page": 1,
            "size": 2,
            "total": 2,
          },
        }
      }
    />
  </dl>
</Fragment>
`;
